prometheus/alertmanager-traefik-ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress-tls
  namespace: prometheus 
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`alertmanager.wastedbits.org`)
      kind: Rule
      services:
        - name: prometheus-alertmanager
          port: 80
  tls:
    certResolver: gandi
    domains:
      - main: "wastedbits.org"
        sans:
          - "*.wastedbits.org"
