prometheus/grafana-traefik-ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-tls
  namespace: grafana 
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`grafana.wastedbits.org`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    certResolver: gandi
    domains:
      - main: "wastedbits.org"
        sans:
          - "*.wastedbits.org"
